--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@svgr/webpack": "^8.1.0",
     "landing_page": "file:",
     "next": "^15.0.3",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
