--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "landing_page": "file:",
+    "lucide-react": "^0.456.0",
     "next": "^15.0.3",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
